# conan-gtest-stackoverflow

./: .travis.yml  CMakeLists.txt
tests/: array_tests.cpp
